--- a/client/owner_portal.jade
+++ b/client/owner_portal.jade
@@ -1,5 +1,4 @@
 template(name='owner_portal')
-    //- img.ui.fluid.image.checkin_banner(src="{{c.url 'frontrange' width=1000 height=600 crop='crop'}}")    
     .ui.padded.stackable.grid
         .row
             .twelve.wide.column
@@ -16,64 +15,66 @@ template(name='owner_portal')
                     |work order
         .three.column.row
             .column
-                +my_unit_work_orders
+                +documents_small
             .column
-                +my_building_work_orders
+                .ui.header 
+                    +i name='work' 
+                    |maintenance
+                .ui.header response time
+                .ui.header total requests
+                .ui.header total incomplete
+                .ui.header total diverted
+                .ui.header total complete
             .column
-                +all_work_orders
-        .three.column.row
-            .column
-                .ui.header
-                    +i name='google-alerts'
-                    |notifications
-                .ui.list
-                    each notifications
-                        .item #{text}
-            .column
-                .ui.header
-                    +i name='rss'
-                    |activity
-                .ui.list
-                    each event_logs
-                        .item #{text}
-            .column
-                +posts_small
-        .three.column.row
-            .column
-                +model_scroller model='for_rent' header='for rent' icon='business'
-        .three.column.row
-            .sixteen.wide.column
-                +view_chats
+                +board_member_small
+                +projects_small
+                +board_meeting_minutes_small
+            
+            
+            
+template(name='board_member_small')            
+    .ui.header 
+        +i name='meeting-room'
+        |board
+    each board_members
+        .ui.header #{first_name} #{last_name} 
+            .ui.basic.label(title='approval rating') #{approval_rating}%
+                
 
 
-template(name='my_unit_work_orders')
+template(name='projects_small')            
     .ui.header 
-        +i name='work'
-        |my unit work orders
-    .ui.animated.list
-        each my_unit_work_orders
-            .item
-                a.ui.small.header(href="/work_order/#{_id}/view") #{title}
-                |#{when} by #{_author_username}
-        
-        
-template(name='all_work_orders')
+        +i name='project'
+        |projects
+    each board_members
+        .ui.header #{first_name} #{last_name} 
+            .ui.basic.label(title='approval rating') #{approval_rating}%
+                
+
+
+template(name='board_meeting_minutes_small')            
     .ui.header 
-        +i name='work'
-        |work orders
-    .ui.animated.list
-        each all_work_orders
-            .item
-                a.ui.small.header(href="/work_order/#{_id}/view") #{title}
-                |#{when} by #{_author_username}
-        
-        
-template(name='my_building_work_orders')
-    .ui.header 
-        +i name='work'
-        |building #{my_building.code} work orders
-    .ui.animated.list
-        each my_building_work_orders
-            .item
-                a.ui.small.header(href="/work_order/#{_id}/view") #{title}
-                |#{when} by #{_author_username}
+        +i name='checklist'
+        |board meeting minutes
+    each board_members
+        .ui.header #{first_name} #{last_name} 
+            .ui.basic.label(title='approval rating') #{approval_rating}%
+                
+
+
+
+template(name='documents_small')
+    .ui.header
+        +i name='document'
+        |documents
+    .ui.link.list
+        each documents
+            a.item(href="/m/document/#{_id}/view") 
+                .header.log_view
+                    |#{title}
+                span 
+                    |#{views}
+                    i.eye.icon
+                span         
+                    |#{points}
+                    i.thumbs.up.icon
