--- a/client/users.jade
+++ b/client/users.jade
@@ -20,6 +20,17 @@ template(name='profiles')
                     each profiles
                         +profile
                 
+template(name='owners') 
+    .ui.padded.grid
+        .row
+            .sixteen.wide.column
+                .ui.left.icon.huge.fluid.input
+                    i.search.icon
+                    input.username_search(type='text' placeholder='lookup resident...' autofocus='autofocus')
+                .ui.centered.four.stackable.cards
+                    each owners
+                        +profile
+                
 template(name='users') 
     .ui.padded.grid
         .row
